--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.12",
@@ -20,6 +21,7 @@
     "@vue/eslint-config-prettier": "^10.0.0",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.29.0",
+    "gh-pages": "^6.2.0",
     "prettier": "^3.3.3",
     "vite": "^5.4.8"
   }
